--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -15,7 +15,7 @@ en:
     failure:
       already_authenticated: 'You are already signed in.'
       unauthenticated: 'You need to sign in or sign up before continuing.'
-      unconfirmed: 'You have to confirm your account before continuing.'
+      unconfirmed: 'Please confirm your email address before logging in. Check your inbox.'
       locked: 'Your account is locked.'
       invalid: 'Invalid username or password.'
       invalid_token: 'Invalid authentication token.'
