--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -51,8 +51,8 @@ en:
       failure: 'Could not authenticate you from %{kind} because "%{reason}".'
     mailer:
       confirmation_instructions:
-        subject: 'Confirmation instructions'
+        subject: 'CloudSpokes Confirmation Instructions'
       reset_password_instructions:
-        subject: 'Reset password instructions'
+        subject: 'CloudSpokes Reset Password Instructions'
       unlock_instructions:
-        subject: 'Unlock Instructions'
+        subject: 'CloudSpokes Unlock Instructions'
